Shortcut to open new OSWindow
Note that rendering is still pretty buggy with multiple windows.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -244,7 +244,8 @@ map ctrl+shift+h         show_scrollback
 
 # Window management
 map ctrl+shift+enter    new_window 
-map ctrl+shift+w        close_window
+map ctrl+shift+n        new_os_window 
+map ctrl+shift+m        close_window
 map ctrl+shift+]        next_window
 map ctrl+shift+[        previous_window
 map ctrl+shift+f        move_window_forward
