Build kitty against bundled glfw

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@ kitty/key_encoding.py linguist-generated=true
 kitty/rgb.py linguist-generated=true
 kitty/gl-wrapper.* linguist-generated=true
 kitty/khrplatform.h linguist-generated=true
-glfw/*.c linguist-vendored
-glfw/*.h linguist-vendored
+kitty/glfw-wrapper.* linguist-generated=true
+glfw/*.c linguist-vendored=true
+glfw/*.h linguist-vendored=true
