Add an option to control the audio bell volume on X11

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -331,3 +331,7 @@ macos_hide_titlebar no
 # break any Alt+key keyboard shortcuts in your terminal programs, but you
 # can use the macOS unicode input technique.
 macos_option_as_alt yes
+
+# The number is a percentage of maximum volume.
+# See man XBell for details.
+x11_bell_volume 80
