Start work on background opacity

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -43,6 +43,11 @@ foreground       #dddddd
 # The background color
 background       #000000
 
+# The opacity of the background. A number between 0 and 1, where 1 is opaque and 0 is fully transparent.
+# Note that this will only work if supported by the OS (for instance, when using a compositor under X11).
+# Be aware that using a value less than 1.0 is a performance hit.
+background_opacity 1.0
+
 # The foreground for selections
 selection_foreground #000000
 
