Get background_opacity working, at the cost of breaking negative z-index image rendering.
Image rendering will need to use an FBO since OpenGL cannot do proper alpha compositing.
As a first step, the interleaved shaders now generate premultiplied colors as opengl can only alpha blend pre-multipled colors

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,8 +44,15 @@ foreground       #dddddd
 background       #000000
 
 # The opacity of the background. A number between 0 and 1, where 1 is opaque and 0 is fully transparent.
-# Note that this will only work if supported by the OS (for instance, when using a compositor under X11).
-# Be aware that using a value less than 1.0 is a performance hit.
+# This will only work if supported by the OS (for instance, when using a compositor under X11). Note
+# that it only sets the default background color's opacity. This is so that
+# things like the status bar in vim, powerline prompts, etc. still look good.
+# But it means that if you use a color theme with a background color in your
+# editor, it will not be rendered as transparent.  Instead you should change the
+# default background color in your kitty config and not use a background color
+# in the editor color scheme. Or use the escape codes to set the terminals
+# default colors in a shell script to launch your editor.
+# Be aware that using a value less than 1.0 is a (possibly significant) performance hit.
 background_opacity 1.0
 
 # The foreground for selections
